it was probably buggy

--- a/action.yml
+++ b/action.yml
@@ -1,90 +1,78 @@
-name: ESLint changed files (Pin eslint version at 8.57.0)
+name: ESLint changed files
 description: Run ESLint on all changed files
 author: jackton1
 inputs:
   token:
-    description: "[GITHUB\_TOKEN](https://docs.github.com/en/free-pro-team@latest/actions/reference/authentication-in-a-workflow#using-the-github_token-in-a-workflow) or a repo scoped [Personal Access Token](https://docs.github.com/en/free-pro-team@latest/github/authenticating-to-github/creating-a-personal-access-token)"
+    description: '[GITHUB\_TOKEN](https://docs.github.com/en/free-pro-team@latest/actions/reference/authentication-in-a-workflow#using-the-github_token-in-a-workflow) or a repo scoped [Personal Access Token](https://docs.github.com/en/free-pro-team@latest/github/authenticating-to-github/creating-a-personal-access-token)'
     required: true
     default: ${{ github.token }}
   all_files:
-    description: "Run [ESlint](https://eslint.org) on all matching files."
+    description: 'Run [ESlint](https://eslint.org/) on all matching files'
     required: false
     default: false
   config_path:
-    description: "[ESlint](https://eslint.org/) [configuration file](https://eslint.org/docs/user-guide/configuring/). Optionally omit this input for Mono repositories."
+    description: '[ESlint](https://eslint.org/) [configuration file](https://eslint.org/docs/user-guide/configuring/). Optionally omit this input for Mono repositories.'
     required: false
     default: ''
   ignore_path:
-    description: "[ESlint](https://eslint.org/) [ignore file](https://eslint.org/docs/user-guide/configuring/ignoring-code)"
+    description: '[ESlint](https://eslint.org/) [ignore file](https://eslint.org/docs/user-guide/configuring/ignoring-code)'
     required: false
     default: ''
   file_extensions:
-    description: "List of file extensions to watch for changes and run [ESlint](https://eslint.org/) against."
+    description: List of file extensions to watch for changes and run [ESlint](https://eslint.org/) against
     required: false
     default: |
-      **/*.{ts,tsx,js,jsx}
+      **/*.ts
+      **/*.tsx
+      **/*.js
+      **/*.jsx
   extra_args:
-    description: "Extra arguments passed to [ESlint](https://eslint.org/docs/user-guide/command-line-interface)"
+    description: Extra arguments passed to [ESlint](https://eslint.org/docs/user-guide/command-line-interface)
     required: false
     default: ''
   skip_annotations:
-    description: "Skip running reviewdog i.e don't add any annotations."
+    description: Skip running reviewdog i.e don't add any annotations.
     required: false
-    default: false
+    default: 'false'
   level:
-    description: "Report level for reviewdog (info,warning,error)"
+    description: 'Report level for reviewdog [info,warning,error]'
     required: false
     default: 'error'
   reporter:
     description: |
-      [Reporter](https://github.com/reviewdog/reviewdog#reporters) of reviewdog command
-      (github-check, github-pr-review).
+      [Reporter](https://github.com/reviewdog/reviewdog#reporters) of reviewdog command [github-check,github-pr-review].
       github-pr-review can use Markdown and add a link to rule page in reviewdog reports.
     required: false
-    default: 'github-check'
+    default: 'github-pr-review'
   filter_mode:
     description: |
-      [Filter mode](https://github.com/reviewdog/reviewdog#filter-mode) for the reviewdog command
-      (added, diff_context, file, nofilter).
+      [Filtering mode](https://github.com/reviewdog/reviewdog#filter-mode) for the reviewdog command [added,diff_context,file,nofilter].
     required: false
     default: 'added'
   fail_on_error:
-    description: "Exit code for reviewdog when errors are found."
+    description: |
+      Exit code for reviewdog when errors are found [true,false].
     required: false
     default: 'true'
   path:
-   description: "Relative path under GITHUB_WORKSPACE to the repository"
+   description: 'Relative path under GITHUB_WORKSPACE to the repository'
    required: false
    default: '.'
-  skip_initial_fetch:
-    description: |
-      Skip initially fetching additional history to improve performance for shallow repositories.
-      NOTE: This could lead to errors with missing history. It's intended to be used when you've fetched all necessary history to perform the diff.
-    required: false
-    default: false
-  use_rest_api:
-    description: |
-      Force the use of Github's REST API even when a local copy of the repository exists
-    required: false
-    default: false
 
 runs:
   using: 'composite'
   steps:
     - uses: reviewdog/action-setup@v1
-      if: inputs.skip_annotations == 'false'
       with:
-        reviewdog_version: v0.14.2
+        reviewdog_version: v0.14.1
     - name: Get changed files
       id: changed-files
-      uses: tj-actions/changed-files@v44
+      uses: tj-actions/changed-files@v28
       with:
         path: ${{ inputs.path }}
         files: ${{ inputs.file_extensions }}
         files_ignore_from_source_file: ${{ inputs.ignore_path }}
         diff_relative: true
-        skip_initial_fetch: ${{ inputs.skip_initial_fetch }}
-        use_rest_api: ${{ inputs.use_rest_api }}
     - name: Run eslint on changed files
       run: |
         # Run eslint on changed files
@@ -100,7 +88,6 @@ runs:
         # INPUT_<VARIABLE_NAME> is not available in Composite run steps
         # https://github.community/t/input-variable-name-is-not-available-in-composite-run-steps/127611
         INPUT_TOKEN: ${{ inputs.token }}
-        REVIEWDOG_GITHUB_API_TOKEN: ${{ inputs.token }}
         INPUT_PATH: ${{ inputs.path }}
         INPUT_LEVEL: ${{ inputs.level }}
         INPUT_ALL_FILES: ${{ inputs.all_files }}
