--- a/renovate.json
+++ b/renovate.json
@@ -7,8 +7,7 @@
   "prConcurrentLimit": 5,
   "rebaseWhen": "behind-base-branch",
   "addLabels": [
-    "dependencies",
-    "merge when passing"
+    "dependencies"
   ],
   "assignees": [
     "jackton1"
@@ -20,21 +19,13 @@
     "enabled": true,
     "automerge": true
   },
-  "nvm": {
-    "enabled": false
-  },
   "packageRules": [
     {
-      "matchUpdateTypes": [
-        "minor",
-        "patch",
-        "pin",
-        "digest"
-      ],
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
       "automerge": true,
       "rebaseWhen": "behind-base-branch",
       "addLabels": [
-        "merge when passing"
+        "automerge"
       ]
     },
     {
@@ -42,15 +33,10 @@
       "matchLanguages": [
         "docker"
       ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch",
-        "pin",
-        "digest"
-      ],
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
       "rebaseWhen": "behind-base-branch",
       "addLabels": [
-        "merge when passing"
+        "automerge"
       ],
       "automerge": true
     }
